# End_to_End_Projects

./: README.md
Agentic_Chatbot/: app.py  requirements.txt
Arxiv_Wiki_DuckGoSearch_Tools_App/: app.py  requirements.txt
Blog_Generation_With_Language_Translation/: app.py  langgraph.json  main.py  pyproject.toml  request.json  requirements.txt
Blog_Generation_With_Language_Translation/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Blog_Generation_With_Language_Translation/src/blog_generation_bot/graphs/: blog_graph_builder.py
Blog_Generation_With_Language_Translation/src/blog_generation_bot/llms/: groq_model.py  ollama_model.py
Blog_Generation_With_Language_Translation/src/blog_generation_bot/nodes/: blog_nodes.py
Blog_Generation_With_Language_Translation/src/blog_generation_bot/states/: blog_state.py
Chat_With_SQL_DB/: app.py  local_db.py  requirements.txt  sql_agent.py  students.db
History_Aware_RAG_Chatbot/: app.py  requirements.txt
Multi_Language_Coder_Using_CodeLlama/: app.py  modelfile  requirements.txt
PDF_Query_Using_AstraDB/: app.py  requirements.txt  temppdf
Q&A_Chatbot_With_Streamlit/: app.py  requirements.txt
RAG_Document_Q&A/: app.py
Report_Generation_Using_Send_API/: requirements.txt  test.ipynb
Web_Search_Functionality_Chatbot/: app.py  requirements.txt
Web_Search_Functionality_Chatbot/AI_News/: daily_summary.md  monthly_summary.md  (+1 more)
Youtube_Transcript_or_URL_Text_Summarizer/: app.py  requirements.txt
(+22 files in other folders)
