[project]
name = "blog-generation-with-language-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.6",
    "langgraph-cli[inmem]>=0.4.19",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.43.0",
]
